[package]
name = "esp8266"
version = "0.0.4"
description = "A minimal peripheral access crate the ESP8266"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
repository = "https://github.com/icewind1991/esp8266"

include = [
    "/src/**",
    "svd/esp8266.svd"
]
license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "0.2"
vcell = "0.1"
