[package]
name = "esp8266"
version = "0.3.0"
description = "A minimal peripheral access crate the ESP8266"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
repository = "https://github.com/icewind1991/esp8266"

include = [
    "/src/**",
    "svd/esp8266.svd"
]
license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "1"
vcell = "0.1"
xtensa-lx = "0.4"
xtensa-lx-rt = { version = "0.7.0", optional = true }

[features]
default=[]
rt=["xtensa-lx-rt"]
